--- a/src/routes/index.html
+++ b/src/routes/index.html
@@ -277,10 +277,10 @@
 
         .preview-img {
             object-fit: cover;
-            width: clamp(200px, 42vw, 270px);
+            /* width: clamp(200px, 42vw, 270px); */
             /* aspect-ratio: 207 / 448; */
             height: 100%;
-            /* width: 100%; */
+            width: 100%;
         }
     </style>
 </head>
