all changes done

--- a/src/routes/index.html
+++ b/src/routes/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Your App – Download</title>
+    <title>Watchrevo Download</title>
     <meta name="description" content="Download our app from the Google Play Store or the Apple App Store." />
-    <meta name="theme-color" content="#111827" />
-    <meta property="og:title" content="Your App – Download" />
+    <meta name="theme-color" content="#1b5d3b" />
+    <meta property="og:title" content="Watchrevo - Download" />
     <meta property="og:description" content="Get the app on Google Play or the App Store." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/assets/og-image.png" />
-    <meta property="og:url" content="https://your-domain.com" />
+    <meta property="og:image" content="https://watchrevo-gallery.s3.ap-southeast-2.amazonaws.com/icon-only.png" />
+    <meta property="og:url" content="https://watchrevoapp.com" />
     <style>
         :root {
             --bg: #0b1020;
